* Code review change - fix problems with add/remove movable buttons * Move ruler visibility state from AdornmentsStore to UIState so that it is common to all graphs * Fixed jest test in adornments-store.test.ts to reflect change in ruler menu

--- a/v3/src/components/graph/components/inspector-panel/measure-panel.scss
+++ b/v3/src/components/graph/components/inspector-panel/measure-panel.scss
@@ -12,9 +12,11 @@
   margin-left: 20px;
 }
 
-measure-movable-value-button {
+.measure-movable-value-button {
   font-size: 12px!important;
   font-weight: 400!important;
   background-color: #eeeeee!important;
-  height: 24px!important;
+  height: 20px!important;
+  width: fit-content;
+  margin-bottom: 5px;
 }
